# polymarket-news-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
scripts/: stats.py
src/polymarket_news_mcp/: ingest.py  markets.py  matching.py  models.py  server.py  trading.py
tests/: test_server.py  test_trading.py
