[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-news-mcp"
version = "0.1.0"
description = "MCP server that matches news headlines to the Polymarket prediction markets they could move — live odds, deep links, explainable matching"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "polymarket", "prediction-markets", "news", "ai-agents", "odds"]
dependencies = ["mcp>=1.2", "httpx>=0.27", "feedparser>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
polymarket-news-mcp = "polymarket_news_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
